fix: chat z-index

--- a/front.old/static/css/styles.css
+++ b/front.old/static/css/styles.css
@@ -305,7 +305,7 @@ fieldset:disabled a.btn {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  z-index: 2000;
+  z-index: 1000;
 }
 
 #chat-card {
